feat: application list/delete
